[gd_scene load_steps=2 format=3 uid="uid://dsk4hdfebwg5p"]

[ext_resource type="Script" uid="uid://dhcwfol7mlp5d" path="res://CoreComponents/LevelProgressionComponent/level_progression_component.gd" id="1_mf256"]

[node name="LevelProgressionComponent" type="Node3D"]
script = ExtResource("1_mf256")

[node name="SecondTimer" type="Timer" parent="."]
wait_time = 0.1
autostart = true

[connection signal="timeout" from="SecondTimer" to="." method="_on_level_timer_timeout"]
